Release 1.3

2006-11-18 Release 1.2.0 (svn 98)
	Removed scrollback disabling code.
		In kernel 2.6+ you have to be root to change the keymap;
		as a result, this feature no longer works for anyone but.
	Added CGC::Color(fg,bg).
	CGC::MakeDiffFrom now returns a bool.
	All CGC operations don't crash on an zero-size canvas.

2005-11-10 Release 1.1.0
	Fixed crash when looking up keys in uninitialized CKeyboard.
	Reset errno if EINTR is received in WaitForKeydata.
	Support for reading terminfos on big-endian systems.
	Updated configure to search for ustl library.
	Updated demo Makefile to not link with libsupc++ if not needed.
	Updated to ustl-0.8.0.

Release 1.0.0
	Initial release.