@@ -1,4 +1,7 @@
 Release 1.3
+	Now compiles with gcc 4.1+
+		This required changing all the optimization casts to
+		noalias_cast, hence uSTL 1.1.0 is now required :(
 
 2006-11-18 Release 1.2.0 (svn 98)
 	Removed scrollback disabling code.
